--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Coding Challenge 12</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="example.js" defer></script>
+    <link href="style.css">
 </head>
 <body onload="main()">
     
